--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <title>Personal Website</title>
 </head>
 <body>
-
+    <header>        
+        <a href="#"class="logo"><i class="fa fa-home"></i></a>
+        <nav class="navigation">
+            <a href="#services">SERVICES</a>
+            <a href="#projects">PORTFOLIO</a>
+            <a href="#contact">CONTACT</a>
+        </nav> 
+    </header> 
 </body>
 </html>
