--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
             <a href="#projects">PORTFOLIO</a>
             <a href="#contact">CONTACT</a>
         </nav> 
-    </header> 
+    </header>    
+    <section class="main">
+        <div>
+            <h2>Hi there, I'm Zahidul<br><span>Administrative Officer</span></h2>
+            <h3>My job entails dealing with legal concerns...</h3>
+            <a href="#projects" class="main-btn">HIRE ME</a>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>                
+                <a href="#"><i class="fab fa-whatsapp"></i></a> 
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-viber"></i></a>                               
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
