--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </header>    
     <section class="main">
         <div>
-            <h2>Hi there, I'm Zahidul<br><span>Administrative Officer</span></h2>
-            <h3>My job entails dealing with legal concerns...</h3>
+            <h2>Hi there, I'm Zahidul!!<br><span>(Administrative Officer)</span></h2>
+            <h3>My job entails dealing with legal concerns & so on.....</h3>
             <a href="#projects" class="main-btn">HIRE ME</a>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-linkedin"></i></a>
