--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">    
     <title>Personal Website</title>
 </head>
 <body>
     <header>        
-        <a href="#"class="logo"><i class="fa fa-home"></i></a>
+        <a href="#"class="logo"><i class="fa-solid fa-house-user"></i>HOME</a>
         <nav class="navigation">
-            <a href="#services">SERVICES</a>
-            <a href="#projects">PORTFOLIO</a>
-            <a href="#contact">CONTACT</a>
+            <a href="#services"><i class="fa-solid fa-scale-unbalanced-flip"></i> SERVICES</a>
+            <a href="#projects"><i class="fa-solid fa-code"></i> PORTFOLIO</a>
+            <a href="#contact"><i class="fa-solid fa-address-book"></i> CONTACT</a>
         </nav> 
     </header>    
     <section class="main">
@@ -32,6 +32,29 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
                 <a href="#"><i class="fab fa-pinterest"></i></a>
+            </div>
+        </div>
+    </section>    
+    <section class="cards" id="services">
+        <h2 class="title">Services</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-scale-balanced"></i>
+                </div>
+                <div class="info">
+                    <h3>Legal Consultation & Court</h3>
+                    <p>Consultation in order to go over the paperwork (such as agreements, leases, wills, corporation documents, do-it-yourself court forms). Client representation (perhaps under an arrangement known as "collaborative lawyering," in which both attorneys withdraw from the case if either side chooses to proceed to court)</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-gavel"></i>                    
+                </div>
+                <div class="info">
+                    <h3>Legal Aid & Justice</h3>
+                    <p>The Processing & Preparation of Papers & also representing clients in legal proceedings, as well as administrative, legislative, and arbitration hearings</p>
+                </div>
             </div>
         </div>
     </section>
