worked on service section css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="info">
                     <h3>Legal Consultation & Court</h3>
-                    <p>Consultation in order to go over the paperwork (such as agreements, leases, wills, corporation documents, do-it-yourself court forms). Client representation (perhaps under an arrangement known as "collaborative lawyering," in which both attorneys withdraw from the case if either side chooses to proceed to court)</p>
+                    <p>Consultation in order to go over the paperwork (such as agreements, leases, wills, corporation documents, do-it-yourself court forms).</p>
                 </div>
             </div>
             <div class="card">
@@ -53,7 +53,7 @@
                 </div>
                 <div class="info">
                     <h3>Legal Aid & Justice</h3>
-                    <p>The Processing & Preparation of Papers & also representing clients in legal proceedings, as well as administrative, legislative, and arbitration hearings</p>
+                    <p>The Processing & Preparation of Papers & also representing clients in legal proceedings & hearings.</p>
                 </div>
             </div>
         </div>
