website contact section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="main">
         <div>
             <h2>Hi there, I'm Zahidul!!<br><span>(Administrative Officer)</span></h2>
-            <h3>My job entails dealing with legal concerns & so on.....</h3>
+            <h3>My job entails dealing with legal concerns .......................................................................</h3>
             <a href="#projects" class="main-btn">HIRE ME</a>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -32,6 +32,8 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
                 <a href="#"><i class="fab fa-pinterest"></i></a>
+                <a href="#"><i class="fab fa-reddit"></i></a>
+                <a href="#"><i class="fa-solid fa-map-location"></i></a>
             </div>
         </div>
     </section>    
@@ -58,5 +60,61 @@
             </div>
         </div>
     </section>
+
+    <section class="projects" id="projects">
+        <h2 class="title">Projects</h2>
+        <div class="content">
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/work1.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">Law is a profession and an industry. Let lawyers regulate practice and independent business professionals oversee the industry. Conflation of the two is detrimental to the profession, the industry, and society. Industry has absorbed the legal profession. Law is following in the footsteps of other professions-turned-industries, such as medicine. Like doctors will stop practicing in their self-regulated guild. Lawyers shouldn't regulate themselves. Bifurcating legal regulation will sustain legal practice.</p>
+                    <strong class="project-title">
+                        <span>Worldwide Legal Advice Services</span>
+                        <a href="#" class="more-details">More Info.</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/work2.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">Most law firms were sluggish to adopt mobile, fearing it was another fad like keyword stuffing or viral movies. Other legal firms were looking for similar opportunities. Consider Bird & Bird. All partners received mobiles and tablets, a mobile distribution management (MDM) platform was implemented, and the company began implementing its first mobility strategy. When they attempted to distribute apps, they encountered a market limitation: the high cost and low availability of mobile developers and digital firms. Because they couldn't miss out, they persisted (until they found Fliplet). Lawyers need an app strategy. Because, it is now an industry norm. They are the ideal outlet for some of the stuff (that you already have!) that you have. They present one-of-a-kind opportunities for advertising. Your customers have a certain expectation of you. Apps will provide you with an advantage in customer service, in addition to reducing your reliance on email.</p>
+                    <strong class="project-title">
+                        <span>Law & Lawyers</span>
+                        <a href="#" class="more-details">More Details</a>
+                    </strong>
+                </div>
+            </div>           
+        </div>        
+    </section>
+    <section class="cards contact" id="contact">
+        <h2 class="title">Contact Me!</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-mobile"></i>
+                </div>
+                <div class="info">
+                    <h3>Phone</h3>
+                    <p>+8801918983434</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-paper-plane"></i>
+                </div>
+                <div class="info">
+                    <h3>Email</h3>
+                    <p>haq@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>    
+    <footer class="footer">
+        <p class="footer-title">© All Rights Reserved</p>
+    </footer>
 </body>
 </html>
