--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">    
     <title>Personal Website</title>
+    <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
 </head>
 <body>
     <header>        
@@ -115,6 +116,9 @@
     </section>    
     <footer class="footer">
         <p class="footer-title">© All Rights Reserved</p>
+        <div class="copy">
+            <span>Copyrights </span><i class="fa-solid fa-at"></i><span>Zahidul Haque</span>
+        </div>
     </footer>
 </body>
 </html>
